

##################################################################

opsi-winst/opsi-script (4.11.7.0) experimental; urgency=low

  * new unit osdefinedfunctions
  * osparser: support for defined functions
  * osparser: moved sync between FExtremeErrorLevel and extremeErrorLevel before final output
  * osparser: new functions: boolToSting(<bool expression>) and stringToBool(< string>)

-- Detlef Oertel <d.oertel@uib.de>  Mon, 19 Jun 2017:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.13) stable; urgency=low

  * oswebservice: typo: lastcation
  * osbatchgui: use myStringToTColor to interpret rgb colors from ini file

-- Detlef Oertel <d.oertel@uib.de>  Mon, 29 May 2017:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.12) stable; urgency=low

  * osjson: escape chars in jsonAsArrayToStringList
  * osparser: Logging at errorsOccurredSinceMark
  * osparser: move/rename/symlink/hardlink: no Syntax error on wrong parameters ; fixes #2036
  * some changes for 64 Bit Version

-- Detlef Oertel <d.oertel@uib.de>  Tue, 03 Jan 2017:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.11) stable; urgency=low

  * source migrated from svn to git and direcories restructured
  * compiled with Lazarus 1.6.2
  * osparser: doOpsiServiceCall: new Parametzer opsiclientd-once (=tscOpsiclientdOnce)
     resets local_opsidata after servicecall
  * osparser: CreateAndProcessScript: resets local_opsidata before script
  * osparser: doAktionen: Statement: 'opsiservicecall /preloginservice' (without sektion) allowed
  * oswebservice: sendLog: shrinking temporary disabled until size can be asked via service call
  * osfuncwin: StrSIDToName: do not try empty string
  * osparser: use 'on e: exception do' in exception handling
  * osfuncwin2: updateenvironment: use lazarus sendmessage
  * osregistry: WriteEntry: unicode / utf8 Support
  * osparser: Resourcestring for translation: rsReadyToContinue
  * osparser: fileactionsmain: GetString with true